# HighPerformanceTradingSim

./: CMakeLists.txt  README.md  data.csv
backup_before_mapping/include/: README.md  accounting_manager.h  audit_replayer.h  config.h  market_data_generator.h  market_data_listener.h  matching_engine.h  order.h  order_book.h  position.h  rest_api_gateway.h  risk_manager.h  scripting_engine.h  trade.h  trade_listener.h  trading_bot.h  zeromq_gateway.h
backup_before_mapping/include/scripts/: my_strategy.lua
backup_before_mapping/include/ui/: main_window.h
backup_before_mapping/src/: accounting_manager.cpp  audit_logger.cpp  audit_replayer.cpp  main.cpp  main_benchmark.cpp  market_data_generator.cpp  matching_engine.cpp  order.cpp  order_book.cpp  rest_api_gateway.cpp  risk_manager.cpp  scripting_engine.cpp  trade.cpp  trading_bot.cpp  zeromq_gateway.cpp
backup_before_mapping/src/ui/: main_window.cpp
include/: accounting_manager.h  audit_logger.h  command.h  config.h  dashboard.h  engine.h  logger.h  market_data.h  market_data_generator.h  marketdataconsumer.h  marketdatapublisher.h  matching_engine.h  order.h  order_book.h  rest_api_gateway.h  risk_manager.h  scripting_engine.h  storage_manager.h  telemetry.h  trade.h  trading.h  zeromq_gateway.h
include/ui/: main_window.h  ui_features.h
src/: REQ_MAPPING.md  accounting_manager.cpp  audit_logger.cpp  audit_replayer.cpp  cli_client.cpp  config.cpp  dashboard.cpp  engine.cpp  logger.cpp  main.cpp  main_backend_test.cpp  main_ui.cpp  market_data_generator.cpp  marketdataconsumer.cpp  matching_engine.cpp  order.cpp  order_book.cpp  rest_api_gateway.cpp  risk_manager.cpp  scripting_engine.cpp  storage_manager.cpp  telemetry.cpp  trade.cpp  tradingchart.cpp  zeromq_gateway.cpp
src/ui/: main_window.cpp  ui_features.cpp
